# activated-notebook-importer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/activated_notebook_importer/: __init__.py  importer.py
tests/: test_importer.py
